v0.30.1-SNAPSHOT, zmena Java verze, opravy proti termItu