@@ -1,5 +1,6 @@
 package cz.cvut.kbss.jopa.modelgen;
 
+import cz.cvut.kbss.jopa.modelgen.classmodel.AnnotationEnum;
 import cz.cvut.kbss.jopa.modelgen.classmodel.Field;
 import cz.cvut.kbss.jopa.modelgen.classmodel.MetamodelClass;
 import cz.cvut.kbss.jopa.modelgen.classmodel.Type;
@@ -38,7 +39,7 @@ class OutputFilesGeneratorTests {
         Field field = new Field();
         assertFalse(OutputFilesGenerator.isAnnotatedWith(field, null));
 
-        field.setAnnotatedWith(List.of(AnnotationEnum.ID));
+        field.setAnnotatedWith(Arrays.asList(AnnotationEnum.ID));
         assertFalse(OutputFilesGenerator.isAnnotatedWith(field, AnnotationEnum.PROPERTIES));
         assertFalse(OutputFilesGenerator.isAnnotatedWith(field, AnnotationEnum.TYPES));
         assertFalse(OutputFilesGenerator.isAnnotatedWith(field, AnnotationEnum.OBJECTPROPERTY));
@@ -61,11 +62,12 @@ class OutputFilesGeneratorTests {
             MetamodelClass cl = new MetamodelClass();
             Class<TestingClass> testingClass = TestingClass.class;
             cl.setName(testingClass.getSimpleName());
-            cl.setPckg(testingClass.getPackageName());
+            cl.setPckg(testingClass.getPackage().getName());
             cl.getImports().add(testingClass.getName());
+            cl.setExtend("");
 
             Field field1 = new Field();
-            field1.setAnnotatedWith(List.of(AnnotationEnum.ID));
+            field1.setAnnotatedWith(Arrays.asList(AnnotationEnum.ID));
             field1.setName("id");
             field1.setParentName("cz.test.ex.TestingClass");
             Type type1 = new Type();
@@ -74,45 +76,45 @@ class OutputFilesGeneratorTests {
             cl.addProperty(field1);
 
             Field field2 = new Field();
-            field2.setAnnotatedWith(List.of(AnnotationEnum.OBJECTPROPERTY));
+            field2.setAnnotatedWith(Arrays.asList(AnnotationEnum.OBJECTPROPERTY));
             field2.setName("object");
             field2.setParentName("cz.test.ex.TestingClass");
             field2.setType(type1);
             cl.addProperty(field2);
 
             Field field3 = new Field();
-            field3.setAnnotatedWith(List.of(AnnotationEnum.TYPES));
+            field3.setAnnotatedWith(Arrays.asList(AnnotationEnum.TYPES));
             field3.setName("types");
             field3.setParentName("cz.test.ex.TestingClass");
             field3.setType(type1);
             cl.addProperty(field3);
 
             Field field5 = new Field();
-            field5.setAnnotatedWith(List.of(AnnotationEnum.DATAPROPERTY));
+            field5.setAnnotatedWith(Arrays.asList(AnnotationEnum.DATAPROPERTY));
             field5.setName("data-list");
             field5.setParentName("cz.test.ex.TestingClass");
             Type type5 = new Type();
             type5.setTypeName(List.class.getName());
             type5.setIsSimple(false);
             field5.setType(type5);
-            type5.setTypes(List.of(type1));
+            type5.setTypes(Arrays.asList(type1));
             field5.setType(type5);
             cl.addProperty(field5);
 
             Field field6 = new Field();
-            field6.setAnnotatedWith(List.of(AnnotationEnum.DATAPROPERTY));
+            field6.setAnnotatedWith(Arrays.asList(AnnotationEnum.DATAPROPERTY));
             field6.setName("data-set");
             field6.setParentName("cz.test.ex.TestingClass");
             Type type6 = new Type();
             type6.setTypeName(Set.class.getName());
             type6.setIsSimple(false);
             field6.setType(type6);
-            type6.setTypes(List.of(type1));
+            type6.setTypes(Arrays.asList(type1));
             field6.setType(type6);
             cl.addProperty(field6);
 
             Field field7 = new Field();
-            field7.setAnnotatedWith(List.of(AnnotationEnum.PROPERTIES));
+            field7.setAnnotatedWith(Arrays.asList(AnnotationEnum.PROPERTIES));
             field7.setName("properties-map");
             field7.setParentName("cz.test.ex.TestingClass");
             Type type7 = new Type();
@@ -121,16 +123,16 @@ class OutputFilesGeneratorTests {
             Type type8 = new Type();
             type8.setTypeName(String.class.getName());
             field7.setType(type7);
-            type7.setTypes(List.of(type8, type6));
+            type7.setTypes(Arrays.asList(type8, type6));
             field7.setType(type7);
             cl.addProperty(field7);
 
             Field field8 = new Field();
-            field8.setAnnotatedWith(List.of(AnnotationEnum.PROPERTIES));
+            field8.setAnnotatedWith(Arrays.asList(AnnotationEnum.PROPERTIES));
             field8.setName("properties");
             field8.setParentName("cz.test.ex.TestingClass");
             field8.setType(type6);
-            type6.setTypes(List.of(type1));
+            type6.setTypes(Arrays.asList(type1));
             field8.setType(type6);
             cl.addProperty(field8);
 
@@ -148,15 +150,15 @@ class OutputFilesGeneratorTests {
                             "\n" +
                             "@Generated(value = \"cz.cvut.kbss.jopa.modelgen.ModelGenProcessor\")\n" +
                             "@StaticMetamodel(TestingClass.class)\n" +
-                            "public class TestingClass_ {\n" +
+                            "public abstract class TestingClass_ {\n" +
                             "\n" +
-                            "\t public static volatile Identifier<TestingClass, Test> id;\n" +
-                            "\t public static volatile SingularAttribute<TestingClass, Test> object;\n" +
-                            "\t public static volatile TypesSpecification<TestingClass, Test> types;\n" +
-                            "\t public static volatile ListAttribute<TestingClass, Test> data-list;\n" +
-                            "\t public static volatile SetAttribute<TestingClass, Test> data-set;\n" +
-                            "\t public static volatile PropertiesSpecification<TestingClass, Map, String, Test> properties-map;\n" +
-                            "\t public static volatile PropertiesSpecification<TestingClass, Test> properties;\n" +
+                            "\t public static volatile Identifier<TestingClass, Test> id;\n\n" +
+                            "\t public static volatile SingularAttribute<TestingClass, Test> object;\n\n" +
+                            "\t public static volatile TypesSpecification<TestingClass, Test> types;\n\n" +
+                            "\t public static volatile ListAttribute<TestingClass, Test> data-list;\n\n" +
+                            "\t public static volatile SetAttribute<TestingClass, Test> data-set;\n\n" +
+                            "\t public static volatile PropertiesSpecification<TestingClass, Map, String, Test> properties-map;\n\n" +
+                            "\t public static volatile PropertiesSpecification<TestingClass, Test> properties;\n\n" +
                             "}", readFileAsString(resultFile));
         }
 
